# ml

./: .gitignore  README.md  pyproject.toml
01-intro/: homework_1.ipynb
01-intro/notebooks/: large_file.csv  linear-algebra.ipynb  numpy.ipynb  pandas.ipynb
02-Linear_regression/: notebook.ipynb  project1.ipynb
02-regression/02-Linear_regression/: notebook.ipynb  project1.ipynb
02-regression/logistic regression/: app.py  logistic.ipynb
03-classification/: notebook.ipynb
fastApi/: app.py
