[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^7.0.0"
plotly = "^6.3.1"
swifter = "^1.4.0"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
dask = "^2025.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
